--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,17 @@ body {
 }
 
 * {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 
@@ -48,6 +54,11 @@ p {
     padding: 0 10px;
 }
 
+.page-wrap {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 
 /*
  * = SITE HEADER =
@@ -60,6 +71,12 @@ p {
 .site-header .logo {
     width: 100%;
     padding: 10px;
+}
+
+@media (min-width: 700px) {
+    .site-header .logo {
+        width: 700px;
+    }        
 }
 
 .site-header .contact-info a {
@@ -84,6 +101,7 @@ p {
 .site-footer {
     text-align: center;
     padding-bottom: 20px;
+    margin-top: 20px;
 }
 
 .site-footer .contact-info a {
@@ -99,6 +117,53 @@ p {
  * = PAGE CONTENT =
  */
 
+@media (min-width: 800px) {
+    .page-content .banner img {
+        width: 66.66%;
+        display: block;
+        float: left;
+    }
+
+    .page-content .banner p {
+        width: 33.33%;
+        display: block;
+        float: left;
+        margin: 0;
+        padding-top: 6px;
+    }
+
+    .page-content .banner h1 {
+        margin-top: 0;
+    }
+
+    .page-content .banner {
+        overflow: hidden; /* cheap  clear fix */
+        margin-top: 20px;
+        position: absolute;
+        background-color: white;
+
+        z-index: 10;
+        visibility: hidden;
+        opacity: 0;
+        transition-property: visibility, opacity;
+        transition-duration: 1s;
+    }
+
+    .page-content .banner.active {
+        z-index: 20;
+        visibility: visible;
+        opacity: 1;
+        transition-property: visibility, opacity;
+        transition-duration: 1s;
+    }
+
+    .page-content .banners {
+        overflow: hidden; /* cheap  clear fix */
+        position: relative;
+        height: 0;
+        padding-bottom: 40%;
+    }
+}
 
 /*
  * = TEMPORARY =
