--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,11 @@ html {
 }
 
 body {
+    font-size: 1.8rem;
     margin: 0;
 }
 
 * {
-    font-size: 1.8rem;
-
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
@@ -30,6 +29,7 @@ body {
     display: table;
     clear: both;
 }
+
 
 
 /*
@@ -117,6 +117,7 @@ p {
  * = PAGE CONTENT =
  */
 
+
 @media (min-width: 800px) {
     .page-content .banner img {
         width: 66.66%;
@@ -163,4 +164,56 @@ p {
         height: 0;
         padding-bottom: 40%;
     }
+}
+
+
+
+/*= PROMOTIONS =*/
+
+.promo {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    width: 230px;
+    margin: 20px auto;
+}
+
+.promo .header {
+    display: block;
+    font-size: 3.8rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.promo .body {
+    display: block;
+    width: 200px;
+    margin: 0 auto;
+    overflow: hidden; /* cheap clearfix */
+}
+
+.promo .price {
+    font-size: 3.5rem;
+    line-height: 5rem;
+    display: block;
+    width: 60%;
+    float: left;
+    text-align: center;
+}
+
+.promo .service {
+    display: block;
+    width: 40%;
+    font-size: 2rem;
+    float: right;
+    text-align: center;
+    font-style: italic;
+}
+
+.promo .footer {
+    clear: both;
+    display: block;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
 }
